FeatureAdmin 2007 ChangeLog
  - this file is intended for developers

** Nov, 2014 - Perry
Fix resizing anchoring on main form
New "Find All Activations" and "Load All Activation Data" buttons

** Feb 24th 2013 - RELEASE v 2.3: "FeatureAdmin for MOSS 2007 - v2.3" **

** Feb, 2013 - Perry
Fixed VS2008 source to compile
Trapped & logged Access Denied exceptions in Find Faulty Feature (so it doesn't crash)
Fix Find Activated Feature to correctly find web application scoped features
Fix control anchoring so main form can be enlarged
Add spver class to encapsulate SharePoint version
Backported check in Program.cs that SPFarm.Local exists
Factored code to find activated features into new ActivationFinder class
Add reference to Microsoft.SharePoint.Search in order to set CopyLocal to false (so it doesn't copy it to bin folder)
Record & log exception messages when FeatureManager enumerates exceptions

** Aug, 2015 - Perry
Display more info in the faulty feature removal prompt. Add activation time, 
and solution info (if available). Remove unpopulated compatibility level.